Fix incorrect alignment

--- a/packages/jbg/the-core/publishable/assets/css/the-core.css
+++ b/packages/jbg/the-core/publishable/assets/css/the-core.css
@@ -96,6 +96,12 @@ h4 {
 }
 .profile .profile-body H5{
     font-size: 13px;
+    text-align: left;
+}
+.navbar .dropdown.profile .dropdown-menu h5,
+.navbar .dropdown.profile .dropdown-menu h6{
+    float: none !important;
+    text-align: left;
 }
 .profile ul li a {
     font-size: 13px;
